--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -20,11 +20,11 @@
   .right {
     display: flex;
     gap: 24px;
-    .icon {
-      width: 32px;
-      height: 32px;
-      opacity: 0.3;
+    .iconfont.iconfont-volume {
+      font-size: 32px;
+      opacity: 0.5;
       cursor: pointer;
+      color: #333;
       transition: opacity 0.2s;
       &:hover { opacity: 0.7; }
     }
